--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,6 +5,10 @@ jobs:
     runs-on: ubuntu-latest
     name: A job to say hello
     steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          path: "test-action"
       - name: Hello world action step
         id: hello
         uses:  jesse-peters/test-action@v1.1
