--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
           path: "test-action"
       - name: Hello world action step
         id: hello
-        uses:  jesse-peters/test-action@v1.1
+        uses:  jesse-peters/test-action@main
         with:
           who-to-greet: 'Mona the Octocat'
       # Use the output from the `hello` step
