--- a/action.yml
+++ b/action.yml
@@ -8,6 +8,8 @@ inputs:
 outputs:
   time: # id of output
     description: 'The time we greeted you'
+  diff:
+    description: 'Pretty Diff'
 runs:
   using: 'node12'
   main: 'dist/index.js'
