--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,11 +9,8 @@ jobs:
         uses: actions/checkout@v2
         with:
           path: "test-action"
-      - name: Hello world action step
-        id: hello
+      - name: Test CDK Diff
+        id: diff
         uses:  jesse-peters/test-action@main
-        with:
-          who-to-greet: 'Mona the Octocat'
-      # Use the output from the `hello` step
-      - name: Get the output time
-        run: echo "The time was ${{ steps.hello.outputs.time }}"
+      - name: Get the diff
+        run: echo "The diff was ${{ steps.diff.outputs.diff }}"
