--- a/action.yml
+++ b/action.yml
@@ -1,13 +1,6 @@
-name: 'Hello World'
-description: 'Greet someone and record the time'
-inputs:
-  who-to-greet:  # id of input
-    description: 'Who to greet'
-    required: true
-    default: 'World'
+name: 'Diff'
+description: 'Diff'
 outputs:
-  time: # id of output
-    description: 'The time we greeted you'
   diff:
     description: 'Pretty Diff'
 runs:
