--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@actions/core": "^1.6.0",
     "@actions/github": "^5.0.0",
+    "@angular/cdk": "^13.3.0",
     "cdk-pretty-diff": "^0.4.4"
   }
 }
