--- a/package.json
+++ b/package.json
@@ -21,6 +21,16 @@
     "@actions/core": "^1.6.0",
     "@actions/github": "^5.0.0",
     "@angular/cdk": "^13.3.0",
-    "cdk-pretty-diff": "^0.4.4"
+    "archiver": "^5.3.0",
+    "aws-sdk": "^2.1095.0",
+    "cdk-assets": "^2.17.0",
+    "cdk-pretty-diff": "^0.4.4",
+    "chokidar": "^3.5.3",
+    "minimatch": "^5.0.1",
+    "promptly": "^3.2.0",
+    "semver": "^7.3.5",
+    "wrap-ansi": "^8.0.1",
+    "yaml": "^1.10.2",
+    "ymal": "^0.1.0"
   }
 }
